--- a/models/category/columns.yaml
+++ b/models/category/columns.yaml
@@ -4,13 +4,17 @@
 
 columns:
     name:
-        label: vojtasvoboda.brands::lang.columns.category.name
+        label: vojtasvoboda.brands::lang.labels.category.name
         searchable: true
         sortable: true
     slug:
-        label: vojtasvoboda.brands::lang.columns.category.slug
+        label: vojtasvoboda.brands::lang.labels.category.slug
         searchable: true
         sortable: true
     sort_order:
-        label: vojtasvoboda.brands::lang.columns.category.sort_order
+        label: vojtasvoboda.brands::lang.labels.category.sort_order
+        sortable: true
+    enabled:
+        label: vojtasvoboda.brands::lang.labels.brand.enabled
+        type: switch
         sortable: true
