--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -7,3 +7,4 @@
 1.0.3: Add DE locale (thanks to Patrick Durrer)
 1.0.4: Fix typo
 1.0.5: Add letters filtration
+1.0.6: Fix letters component when replacing component with own code
