--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -8,3 +8,4 @@
 1.0.4: Fix typo
 1.0.5: Add letters filtration
 1.0.6: Fix letters component when replacing component with own code
+1.0.7: Fix showing only enabled brands
