Categories sort ordering

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -9,3 +9,4 @@
 1.0.5: Add letters filtration
 1.0.6: Fix letters component when replacing component with own code
 1.0.7: Fix showing only enabled brands
+1.0.8: Categories sort ordering
