--- a/controllers/brands/config_list.yaml
+++ b/controllers/brands/config_list.yaml
@@ -42,3 +42,6 @@ toolbar:
     # Search widget configuration
     search:
         prompt: backend::lang.list.search_prompt
+
+# List filtering
+filter: config_filter.yaml
